--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/noah-frank/private-to-do-list#readme",
   "dependencies": {
-    "express": "^4.18.3"
+    "body-parser": "^1.20.2",
+    "esm": "^3.2.25",
+    "express": "^4.18.3",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
