--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   }
 }
