--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "mocha tests/*/*.js",
-    "sass": "sass --watch public/styles/main.scss:public/styles/main.css"
+    "sass": "sass --watch public/styles/main.scss:public/styles/main.css",
+    "dev-sass": "concurrently \"npm run dev\" \"npm run sass\""
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "chai": "^5.1.0",
     "chai-http": "^4.4.0",
+    "concurrently": "^8.2.2",
     "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
