--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Build and Push Docker Image
       run: |
-        git pull origin main
+        git pull origin master
         docker build -t taskmaster .
         docker stop taskmaster_web || true
         docker rm taskmaster_web || true
