--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
+    "nm": "nodemon app.js",
     "test": "mocha tests/*/*.js",
     "sass": "sass --watch public/styles/main.scss:public/styles/main.css",
-    "dev-sass": "concurrently \"npm run dev\" \"npm run sass\""
+    "dev": "concurrently \"npm run nm\" \"npm run sass\""
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "chai": "^5.1.0",
     "chai-http": "^4.4.0",
     "concurrently": "^8.2.2",
+    "ejs": "^3.1.9",
     "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
