Start implementing database

--- a/.babelrc
+++ b/.babelrc
@@ -9,12 +9,5 @@
             }
         ]
     ],
-    "sourceMaps": "inline",
-    "env": {
-        "test": {
-            "plugins": [
-                "istanbul"
-            ]
-        }
-    }
+    "sourceMaps": "inline"
 }
