--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node startServer.js",
     "nm": "nodemon startServer.js",
-    "test": "NODE_ENV=test nyc --require @babel/register --reporter=html --reporter=text mocha 'tests/*'",
+    "test": "jest --coverage",
     "sass": "sass --watch public/styles/scss:public/styles/css",
     "dev": "concurrently \"npm run nm\" \"npm run sass\""
   },
@@ -21,10 +21,15 @@
     "url": "https://github.com/noah-frank/private-to-do-list/issues"
   },
   "homepage": "https://github.com/noah-frank/private-to-do-list#readme",
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "esm": "^3.2.25",
     "express": "^4.18.3",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "sass": "^1.71.1"
@@ -38,11 +43,15 @@
     "@babel/register": "^7.23.7",
     "@babel/runtime": "^7.24.0",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-jest": "^29.7.0",
     "babel-plugin-istanbul": "^6.1.1",
     "chai": "^5.1.0",
     "chai-http": "^4.4.0",
     "concurrently": "^8.2.2",
     "ejs": "^3.1.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "nyc": "^15.1.0",
