--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "testEnvironment": "jsdom"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "esm": "^3.2.25",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^7.6.3",
     "node-fetch": "^3.3.2",
