--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "nm": "nodemon startServer.js",
     "test": "jest --coverage",
     "sass": "sass --watch public/styles/scss:public/styles/css",
-    "dev": "concurrently \"npm run nm\" \"npm run sass\""
+    "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\""
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,11 @@
     "testEnvironment": "jsdom"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.18.3",
     "fast-glob": "^3.3.2",
