--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "esm": "^3.2.25",
     "express": "^4.18.3",
     "fast-glob": "^3.3.2",
+    "google-auth-library": "^9.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^7.6.3",
