--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "nm": "nodemon -x 'clear && node app.js'",
     "test": "jest --coverage",
     "sass": "sass --watch public/styles/scss:public/styles/css",
-    "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\""
+    "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -24,23 +25,12 @@
   "jest": {
     "testEnvironment": "jsdom"
   },
-  "dependencies": {
-    "axios": "^1.6.8",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "esm": "^3.2.25",
-    "express": "^4.18.3",
-    "fast-glob": "^3.3.2",
-    "google-auth-library": "^9.7.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
-    "mongoose": "^7.6.3",
-    "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2",
-    "path": "^0.12.7",
-    "sass": "^1.71.1"
+  "eslintConfig": {
+    "parser": "@babel/eslint-parser",
+    "parserOptions": {
+      "sourceType": "module",
+      "allowImportExportEverywhere": true
+    }
   },
   "nodemonConfig": {
     "ext": "ejs,js,html"
@@ -73,6 +63,24 @@
     ],
     "sourceMaps": "inline"
   },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "esm": "^3.2.25",
+    "express": "^4.18.3",
+    "fast-glob": "^3.3.2",
+    "google-auth-library": "^9.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "sass": "^1.71.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.24.0",
@@ -82,12 +90,15 @@
     "@babel/register": "^7.23.7",
     "@babel/runtime": "^7.24.0",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "@babel/eslint-parser": "^7.5.4",
     "babel-jest": "^29.7.0",
     "babel-plugin-istanbul": "^6.1.1",
     "chai": "^5.1.0",
     "chai-http": "^4.4.0",
     "concurrently": "^8.2.2",
     "ejs": "^3.1.9",
+    "eslint": "^8.57.0",
+    "eslint-scope": "^8.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
