--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "mocha": "^10.3.0",
         "nodemon": "^3.1.0",
         "nyc": "^15.1.0",
+        "prettier": "^3.2.5",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.4"
     }
