--- a/package.json
+++ b/package.json
@@ -30,7 +30,16 @@
         "parserOptions": {
             "sourceType": "module",
             "allowImportExportEverywhere": true
-        }
+        },
+        "env": {
+            "browser": true,
+            "node": true,
+            "es2021": true
+        },
+        "extends": [
+            "eslint:recommended"
+        ],
+        "rules": {}
     },
     "nodemonConfig": {
         "ext": "ejs,js,html"
@@ -67,6 +76,7 @@
         "axios": "^1.6.8",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
         "dotenv": "^16.4.5",
         "esm": "^3.2.25",
         "express": "^4.18.3",
@@ -83,7 +93,7 @@
     "devDependencies": {
         "@babel/cli": "^7.23.9",
         "@babel/core": "^7.24.0",
-        "@babel/eslint-parser": "^7.5.4",
+        "@babel/eslint-parser": "^7.24.1",
         "@babel/node": "^7.23.9",
         "@babel/plugin-transform-runtime": "^7.24.0",
         "@babel/preset-env": "^7.24.0",
