--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "express": "^4.18.3",
         "fast-glob": "^3.3.2",
         "google-auth-library": "^9.7.0",
+        "js-beautify": "^1.15.1",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.5.0",
         "mongoose": "^8.2.3",
