--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "google-auth-library": "^9.7.0",
         "js-beautify": "^1.15.1",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.30.1",
         "mongodb": "^6.5.0",
         "mongoose": "^8.2.3",
         "morgan": "^1.10.0",
