--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "scripts": {
         "start": "node app.js",
         "nm": "nodemon -x 'clear && node app.js'",
-        "test": "mocha ",
-        "test:watch": "mocha --watch ./src/tests/*.spec.js",
+        "test": "jest",
         "sass": "sass --watch public/styles/scss:public/styles/css",
         "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
         "lint": "eslint ."
