--- a/package.json
+++ b/package.json
@@ -1,123 +1,173 @@
 {
-    "name": "private-to-do-list",
-    "version": "1.0.0",
-    "description": "A private to-do list web application",
-    "main": "app.js",
-    "type": "module",
-    "scripts": {
-        "start": "node app.js",
-        "nm": "nodemon -x 'clear && node app.js'",
-        "test": "jest",
-        "sass": "sass --watch public/styles/scss:public/styles/css",
-        "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
-        "lint": "eslint ."
+  "name": "private-to-do-list",
+  "version": "1.0.0",
+  "description": "A private to-do list web application",
+  "main": "app.js",
+  "type": "module",
+  "scripts": {
+    "start": "node app.js",
+    "nm": "nodemon -x 'clear && node app.js'",
+    "test": "jest",
+    "sass": "sass --watch public/styles/scss:public/styles/css",
+    "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
+    "lint": "eslint ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/noah-frank/private-to-do-list.git"
+  },
+  "author": "Noah Frank",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/noah-frank/private-to-do-list/issues"
+  },
+  "homepage": "https://github.com/noah-frank/private-to-do-list#readme",
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
+  "prettier": {
+    "prettier.singleQuote": true,
+    "prettier.trailingComma": "none",
+    "prettier.jsxBracketSameLine": true,
+    "prettier.arrowParens": "avoid",
+    "prettier.proseWrap": "never",
+    "prettier.printWidth": 120,
+    "prettier.endOfLine": "auto",
+    "prettier.eslintIntegration": true,
+    "prettier.useTabs": false,
+    "prettier.tabWidth": 2,
+    "prettier.semi": true,
+    "prettier.bracketSpacing": true,
+    "prettier.jsxSingleQuote": false,
+    "prettier.importStatementFormatter": "none"
+  },
+  "eslintConfig": {
+    "parser": "@babel/eslint-parser",
+    "parserOptions": {
+      "sourceType": "module",
+      "allowImportExportEverywhere": true
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/noah-frank/private-to-do-list.git"
+    "env": {
+      "browser": true,
+      "node": true,
+      "es2021": true
     },
-    "author": "Noah Frank",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/noah-frank/private-to-do-list/issues"
-    },
-    "homepage": "https://github.com/noah-frank/private-to-do-list#readme",
-    "jest": {
-        "testEnvironment": "jsdom"
-    },
-    "eslintConfig": {
-        "parser": "@babel/eslint-parser",
-        "parserOptions": {
-            "sourceType": "module",
-            "allowImportExportEverywhere": true
-        },
-        "env": {
-            "browser": true,
-            "node": true,
-            "es2021": true
-        },
-        "extends": [
-            "eslint:recommended"
-        ],
-        "rules": {}
-    },
-    "nodemonConfig": {
-        "ext": "ejs,js,html"
-    },
-    "nyc": {
-        "reporter": [
-            "lcov",
-            "text"
-        ],
-        "sourceMap": true,
-        "instrument": true,
-        "include": [
-            "app.js"
-        ],
-        "exclude": [
-            "node_modules/",
-            "tests/"
-        ]
-    },
-    "babel": {
-        "presets": [
+    "extends": [
+      "eslint:recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings",
+      "prettier"
+    ],
+    "plugins": [
+      "import",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": "error",
+      "import/order": [
+        "error",
+        {
+          "groups": [
             [
-                "@babel/preset-env",
-                {
-                    "targets": {
-                        "esmodules": true
-                    }
-                }
+              "builtin",
+              "external",
+              "internal"
             ]
-        ],
-        "sourceMaps": "inline"
-    },
-    "dependencies": {
-        "axios": "^1.6.8",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.2",
-        "cookie-parser": "^1.4.6",
-        "dotenv": "^16.4.5",
-        "esm": "^3.2.25",
-        "express": "^4.18.3",
-        "fast-glob": "^3.3.2",
-        "google-auth-library": "^9.7.0",
-        "js-beautify": "^1.15.1",
-        "jsonwebtoken": "^9.0.2",
-        "moment": "^2.30.1",
-        "mongodb": "^6.5.0",
-        "mongoose": "^8.2.3",
-        "morgan": "^1.10.0",
-        "node-fetch": "^3.3.2",
-        "path": "^0.12.7",
-        "sass": "^1.71.1"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.23.9",
-        "@babel/core": "^7.24.0",
-        "@babel/eslint-parser": "^7.24.1",
-        "@babel/node": "^7.23.9",
-        "@babel/plugin-transform-runtime": "^7.24.0",
-        "@babel/preset-env": "^7.24.0",
-        "@babel/register": "^7.23.7",
-        "@babel/runtime": "^7.24.0",
-        "@istanbuljs/nyc-config-babel": "^3.0.0",
-        "babel-jest": "^29.7.0",
-        "babel-plugin-istanbul": "^6.1.1",
-        "chai": "^5.1.0",
-        "chai-http": "^4.4.0",
-        "concurrently": "^8.2.2",
-        "ejs": "^3.1.9",
-        "eslint": "^8.57.0",
-        "eslint-scope": "^8.0.1",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "jsdom": "^24.0.0",
-        "mocha": "^10.3.0",
-        "nodemon": "^3.1.0",
-        "nyc": "^15.1.0",
-        "prettier": "^3.2.5",
-        "source-map-support": "^0.5.21",
-        "supertest": "^6.3.4"
+          ],
+          "newlines-between": "always"
+        }
+      ],
+      "import/no-duplicates": "error",
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+      ]
     }
+  },
+  "nodemonConfig": {
+    "ext": "ejs,js,html"
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "sourceMap": true,
+    "instrument": true,
+    "include": [
+      "app.js"
+    ],
+    "exclude": [
+      "node_modules/",
+      "tests/"
+    ]
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "esmodules": true
+          }
+        }
+      ]
+    ],
+    "sourceMaps": "inline"
+  },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "esm": "^3.2.25",
+    "express": "^4.18.3",
+    "fast-glob": "^3.3.2",
+    "google-auth-library": "^9.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "sass": "^1.71.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/eslint-parser": "^7.24.1",
+    "@babel/node": "^7.23.9",
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/register": "^7.23.7",
+    "@babel/runtime": "^7.24.0",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-istanbul": "^6.1.1",
+    "chai": "^5.1.0",
+    "chai-http": "^4.4.0",
+    "concurrently": "^8.2.2",
+    "ejs": "^3.1.9",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-scope": "^8.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.1.0",
+    "nyc": "^15.1.0",
+    "prettier": "^3.2.5",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.4"
+  }
 }
