--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node app.js",
     "nm": "nodemon -x 'clear && node app.js'",
     "test": "jest",
+    "coverage": "jest --coverage",
     "sass": "sass --watch public/styles/scss:public/styles/css",
     "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
     "lint": "eslint ."
@@ -31,7 +32,7 @@
     "prettier.jsxBracketSameLine": true,
     "prettier.arrowParens": "avoid",
     "prettier.proseWrap": "never",
-    "prettier.printWidth": 120,
+    "prettier.printWidth": 200,
     "prettier.endOfLine": "auto",
     "prettier.eslintIntegration": true,
     "prettier.useTabs": false,
@@ -50,7 +51,8 @@
     "env": {
       "browser": true,
       "node": true,
-      "es2021": true
+      "es2021": true,
+      "jest": true
     },
     "extends": [
       "eslint:recommended",
@@ -160,6 +162,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-scope": "^8.0.1",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
