--- a/package.json
+++ b/package.json
@@ -120,6 +120,16 @@
         }
       ]
     ],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": [
+            "./src"
+          ]
+        }
+      ]
+    ],
     "sourceMaps": "inline"
   },
   "dependencies": {
@@ -153,6 +163,7 @@
     "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-jest": "^29.7.0",
     "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "chai": "^5.1.0",
     "chai-http": "^4.4.0",
     "concurrently": "^8.2.2",
@@ -161,7 +172,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-scope": "^8.0.1",
-    "istanbul-instrumenter-loader": "^3.0.1",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
