--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node app.js",
     "nm": "nodemon -x 'clear && node app.js'",
-    "test": "jest --coverage",
+    "test": "jest",
     "sass": "sass --watch public/styles/scss:public/styles/css",
     "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
     "lint": "eslint ."
@@ -23,7 +23,12 @@
   },
   "homepage": "https://github.com/noah-frank/private-to-do-list#readme",
   "jest": {
-    "testEnvironment": "jsdom"
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverage": true,
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   },
   "prettier": {
     "prettier.singleQuote": true,
@@ -153,11 +158,11 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.24.0",
+    "@babel/core": "^7.24.4",
     "@babel/eslint-parser": "^7.24.1",
     "@babel/node": "^7.23.9",
     "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-env": "^7.24.4",
     "@babel/register": "^7.23.7",
     "@babel/runtime": "^7.24.0",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
@@ -172,11 +177,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-scope": "^8.0.1",
-    "istanbul-instrumenter-loader": "^2.0.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
     "mocha": "^10.3.0",
+    "mongodb-memory-server": "^9.1.8",
     "nodemon": "^3.1.0",
     "nyc": "^15.1.0",
     "prettier": "^3.2.5",
