--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,18 +1,18 @@
-name: Docker Build and Deploy
+# name: Docker Build and Deploy
 
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Build and Deploy
-        run: |
-          docker-compose -f docker-compose.yml up --build -d
-          docker-compose -f docker-compose.yml ps
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+#       - name: Build and Deploy
+#         run: |
+#           docker-compose -f docker-compose.yml up --build -d
+#           docker-compose -f docker-compose.yml ps
