--- a/package.json
+++ b/package.json
@@ -99,21 +99,6 @@
   "nodemonConfig": {
     "ext": "ejs,js,html"
   },
-  "nyc": {
-    "reporter": [
-      "lcov",
-      "text"
-    ],
-    "sourceMap": true,
-    "instrument": true,
-    "include": [
-      "app.js"
-    ],
-    "exclude": [
-      "node_modules/",
-      "tests/"
-    ]
-  },
   "babel": {
     "presets": [
       [
@@ -165,26 +150,19 @@
     "@babel/preset-env": "^7.24.4",
     "@babel/register": "^7.23.7",
     "@babel/runtime": "^7.24.0",
-    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "@jest/globals": "^29.7.0",
     "babel-jest": "^29.7.0",
-    "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-module-resolver": "^5.0.0",
-    "chai": "^5.1.0",
-    "chai-http": "^4.4.0",
     "concurrently": "^8.2.2",
     "ejs": "^3.1.9",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-scope": "^8.0.1",
-    "istanbul-instrumenter-loader": "^3.0.1",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^24.0.0",
-    "mocha": "^10.3.0",
     "mongodb-memory-server": "^9.1.8",
+    "node-mocks-http": "^1.14.1",
     "nodemon": "^3.1.0",
-    "nyc": "^15.1.0",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4"
