Mock console in jest tests

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "testEnvironment": "node",
     "coverageDirectory": "coverage",
     "collectCoverage": true,
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/jestConsoleMock.js"
+    ],
     "transform": {
       "^.+\\.(js|jsx)$": "babel-jest"
     }
