--- a/package.json
+++ b/package.json
@@ -50,6 +50,11 @@
     "prettier.importStatementFormatter": "none"
   },
   "eslintConfig": {
+    "settings": {
+      "import/resolver": {
+        "babel-module": {}
+      }
+    },
     "parser": "@babel/eslint-parser",
     "parserOptions": {
       "sourceType": "module",
@@ -131,6 +136,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "eslint-plugin-module-resolver": "^1.5.0",
     "esm": "^3.2.25",
     "express": "^4.18.3",
     "fast-glob": "^3.3.2",
@@ -160,6 +166,7 @@
     "ejs": "^3.1.9",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-import": "^2.29.1",
     "eslint-scope": "^8.0.1",
     "jest": "^29.7.0",
