--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node app.js",
     "nm": "nodemon -x 'clear && node app.js'",
-    "test": "jest",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
     "sass": "sass --watch public/styles/scss:public/styles/css",
     "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
     "lint": "eslint ."
