--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node app.js",
     "nm": "nodemon -x 'clear && node app.js'",
-    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "test": "NODE_ENV=test jest",
+    "test-dev": "NODE_ENV=test jest --detectOpenHandles --coverage",
     "sass": "sass --watch public/styles/scss:public/styles/css",
     "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
     "lint": "eslint ."
@@ -130,6 +131,7 @@
     "sourceMaps": "inline"
   },
   "dependencies": {
+    "axe-puppeteer": "^1.1.1",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -147,6 +149,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
+    "puppeteer": "^22.6.4",
     "sass": "^1.71.1"
   },
   "devDependencies": {
