--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node app.js",
     "nm": "nodemon -x 'clear && node app.js'",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test node --trace-deprecation node_modules/.bin/jest",
     "test-dev": "NODE_ENV=test jest --detectOpenHandles --coverage",
     "sass": "sass --watch public/styles/scss:public/styles/css",
     "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
@@ -145,10 +145,11 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.3",
+    "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
+    "punycode": "^2.3.1",
     "puppeteer": "^22.6.4",
     "sass": "^1.71.1"
   },
