--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
   "jest": {
     "testEnvironment": "node",
     "coverageDirectory": "coverage",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/tests/frontend/accessibilityTests.js",
+      "/tests/frontend/functionalTests.js"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>/tests/jestConsoleMock.js"
     ],
