--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nm": "nodemon -x 'clear && node app.js'",
     "test": "NODE_ENV=test node --trace-deprecation node_modules/.bin/jest",
     "test-dev": "NODE_ENV=test jest --detectOpenHandles --coverage",
+    "test-win": "SET NODE_ENV=test & jest --detectOpenHandles --coverage",
     "test-clean": "NODE_ENV=test STYLE=clean jest --verbose",
     "sass": "sass --watch public/styles/scss:public/styles/css",
     "dev": "NODE_ENV=development concurrently \"npm run nm\" \"npm run sass\"",
