Improve code readability

--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
         "error",
         "ignorePackages",
         {
-          "js": "never",
+          "js": "always",
           "jsx": "never",
           "ts": "never",
           "tsx": "never"
