Add CORS support for API requests

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint-plugin-module-resolver": "^1.5.0",
     "esm": "^3.2.25",
