--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "concurrently": "^8.2.2",
+    "depcheck": "^1.4.7",
     "ejs": "^3.1.9",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
