--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
         "module-resolver",
         {
           "root": [
-            "./src"
+            "./"
           ]
         }
       ]
@@ -179,6 +179,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-scope": "^8.0.1",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.8",
