Set cookie SameSite based on env, update prod start script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "NODE_ENV=production node app.js",
     "nm": "nodemon -x 'clear && node app.js'",
     "test": "NODE_ENV=test node --trace-deprecation node_modules/.bin/jest",
     "test-dev": "NODE_ENV=test jest --detectOpenHandles --coverage",
