--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "prettier": "^3.3.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
