--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "prettier": "^3.3.3",
+    "sass": "^1.81.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
