--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "vue": "^3.5.12",
@@ -14,9 +17,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/ui": "^2.1.5",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "sass": "^1.81.0",
     "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4"
+    "vite-plugin-vue-devtools": "^7.5.4",
+    "vitest": "^2.1.5",
+    "vue-test-utils": "^0.5.0"
   }
 }
