--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,22 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:dot": "vitest --silent --reporter dot"
   },
   "dependencies": {
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vitest/ui": "^2.1.5",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "sass": "^1.81.0",
-    "vite": "^5.4.10",
+    "vite": "^5.4.11",
     "vite-plugin-vue-devtools": "^7.5.4",
-    "vitest": "^2.1.5",
-    "vue-test-utils": "^0.5.0"
+    "vitest": "^2.1.5"
   }
 }
