--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
-    "test:dot": "vitest --silent --reporter dot"
+    "test:dot": "vitest --silent --reporter dot",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "vue": "^3.5.12",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.0",
+    "@vitest/coverage-v8": "^2.1.5",
     "@vitest/ui": "^2.1.5",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^25.0.1",
