--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.7.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.0",
