--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "vue": "^3.5.12",
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "vuetify": "^3.7.4"
   },
