--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,8 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "@mdi/font": "^7.4.47",
-    "vite-plugin-vuetify": "^2.0.4",
-    "vue": "^3.5.13",
-    "vue-router": "^4.4.5",
-    "vuetify": "^3.7.4"
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.0",
@@ -31,18 +28,5 @@
     "vite": "^5.4.11",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vitest": "^2.1.5"
-  },
-  "prettier": {
-    "printWidth": 160,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true,
-    "jsxSingleQuote": false,
-    "trailingComma": "none",
-    "bracketSpacing": true,
-    "arrowParens": "avoid",
-    "proseWrap": "never",
-    "endOfLine": "auto"
   }
 }
