--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@vitest/coverage-v8": "^2.1.5",
     "@vitest/ui": "^2.1.5",
     "@vue/test-utils": "^2.4.6",
+    "axe-core": "^4.10.2",
     "c8": "^10.1.2",
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
