--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "vite": "^5.4.11",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vitest": "^2.1.5",
+    "vue-axe": "^3.1.2",
     "xml": "^1.0.1"
   },
   "prettier": {
