Add e2e test server + e2e script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "serve:test": "node tests/server/test-server.js",
+    "test:e2e": "npm-run-all -p serve:test test:e2e:run",
+    "test:e2e:run": "vitest run --environment node tests/e2e",
+    "test:cleanup": "kill $(lsof -t -i:3000 || echo 0)",
     "preview": "vite preview",
     "test:unit": "vitest run --environment jsdom tests/vue",
-    "test:e2e": "vitest run --environment node tests/e2e",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
     "test:dot": "vitest --silent --reporter dot",
@@ -30,7 +33,9 @@
     "@vue/test-utils": "^2.4.6",
     "axe-core": "^4.10.2",
     "c8": "^10.1.2",
+    "express": "^4.21.2",
     "jsdom": "^25.0.1",
+    "npm-run-all": "^4.1.5",
     "playwright": "^1.49.1",
     "prettier": "^3.3.3",
     "sass": "^1.81.0",
