--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@mdi/font": "^7.4.47",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.0.0-beta.2",
+    "vue-i18n": "^10.0.5",
     "vue-router": "^4.4.5",
     "vuetify": "^3.7.4"
   },
