--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/addon-toolbars": "^8.4.7",
     "@storybook/blocks": "^8.4.7",
     "@storybook/test": "^8.4.7",
     "@storybook/vue3": "^8.4.7",
