--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@sentry/vue": "^8.48.0",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.5",
