--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@sentry/vite-plugin": "^2.22.7",
     "@sentry/vue": "^8.48.0",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
