--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 VITE_API_BASE_URL=http://example.com
-SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
-SENTRY_ENVIRONMENT=exampleEnvironment
-SENTRY_TRACES_SAMPLE_RATE=1.0
-SENTRY_TRACE_PROPAGATION_TARGETS=localhost,http://example.com
-SENTRY_REPLAYS_SESSION_SAMPLE_RATE=1.0
-SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE=1.0
+VITE_SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
+VITE_SENTRY_ENVIRONMENT=exampleEnvironment
+VITE_SENTRY_TRACES_SAMPLE_RATE=1.0
+VITE_SENTRY_TRACE_PROPAGATION_TARGETS=localhost,http://example.com
+VITE_SENTRY_REPLAYS_SESSION_SAMPLE_RATE=1.0
+VITE_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE=1.0
