--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:e2e:run": "vitest run --environment node tests/e2e",
     "test:cleanup": "kill $(lsof -t -i:3000 || echo 0)",
     "preview": "vite preview",
-    "test:unit": "vitest run tests/unit --coverage",
+    "test:unit": "vitest --coverage run tests/unit",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
     "test:dot": "vitest --silent --reporter dot",
@@ -45,7 +45,7 @@
     "@vitest/ui": "^2.1.5",
     "@vue/test-utils": "^2.4.6",
     "axe-core": "^4.10.2",
-    "c8": "^10.1.2",
+    "c8": "^10.1.3",
     "express": "^4.21.2",
     "jsdom": "^25.0.1",
     "npm-run-all": "^4.1.5",
