--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:e2e:run": "vitest run --environment node tests/e2e",
     "test:cleanup": "kill $(lsof -t -i:3000 || echo 0)",
     "preview": "vite preview",
-    "test:unit": "vitest --coverage run tests/unit",
+    "test:unit": "vitest run tests/unit --coverage",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
     "test:dot": "vitest --silent --reporter dot",
@@ -49,6 +49,7 @@
     "express": "^4.21.2",
     "jsdom": "^25.0.1",
     "npm-run-all": "^4.1.5",
+    "nyc": "^17.1.0",
     "playwright": "^1.49.1",
     "prettier": "^3.3.3",
     "sass": "^1.81.0",
