--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdi/font": "^7.4.47",
     "@sentry/vite-plugin": "^2.22.7",
     "@sentry/vue": "^8.48.0",
+    "pinia": "^2.3.0",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.5",
