--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@axe-core/playwright": "^4.10.1",
     "@chromatic-com/storybook": "^3.2.3",
     "@pinia/testing": "^0.1.7",
+    "@playwright/test": "^1.50.0",
     "@storybook/addon-a11y": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
