Update playwright setup

--- a/package.json
+++ b/package.json
@@ -6,14 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve:test": "node tests/server/test-server.js",
-    "test:e2e": "npm-run-all -p serve:test test:e2e:run",
-    "test:e2e:run": "vitest run --environment node tests/e2e",
-    "test:cleanup": "kill $(lsof -t -i:3000 || echo 0)",
     "preview": "vite preview",
+    "test:serve": "vite",
     "test:unit": "vitest run tests/unit --coverage",
-    "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
     "test:dot": "vitest --silent --reporter dot",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
