Setup integration tests

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "test:serve": "vite",
     "test:unit": "vitest run tests/unit --coverage",
+    "test:integration": "vitest run tests/integration",
     "test:e2e": "playwright test",
     "test:dot": "vitest --silent --reporter dot",
     "storybook": "storybook dev -p 6006",
@@ -52,6 +53,7 @@
     "nyc": "^17.1.0",
     "playwright": "^1.50.0",
     "prettier": "^3.3.3",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.81.0",
     "storybook": "^8.4.7",
     "vite": "^5.4.11",
